# psb-sockutils-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-variants.yaml  vcpkg.json
.github/: codeql-config.yml  renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  ctest.yml  lint.yml  update-vcpkg-baseline.yml
cmake/: psb-sockutils-config.cmake
ctest/: asan.ctest.cmake  common.cmake  coverage.ctest.cmake  ubsan.ctest.cmake  valgrind.ctest.cmake
src/: CMakeLists.txt  export.h  sockutils.cpp  sockutils.h
test/: CMakeLists.txt  accept_connection.cpp  bind_socket.cpp  create_listening_socket.cpp  get_socket_info.cpp  inet_pton.cpp  make_cloexec.cpp  make_nonblocking.cpp  set_socket_option.cpp  utils.cpp  utils.h
